# umg801-recordings

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CustomUaTypes.hpp  NodeId.cpp  NodeId.hpp  OpcUaUtil.cpp  OpcUaUtil.hpp  OpcuaClient.cpp  OpcuaClient.hpp  Recording.cpp  Recording.hpp  Umg801.cpp  Umg801.hpp  main.cpp  records.proto
